fix: Close small gap on right side of project section

--- a/css/main.scss
+++ b/css/main.scss
@@ -122,7 +122,7 @@ body {
             width: 32%;
         }
         .project:nth-child(3n+2) {
-            margin: 0 1.5%;
+            margin: 0 2%;
         }
         .projects-content {
             display: flex;
@@ -140,7 +140,7 @@ body {
         }
         .project:nth-child(n) {
             margin: 0;
-            margin-right: 1%;
+            margin-right: 1.3333333%;
         }
         .project:nth-child(n+4) {
             margin-right: 0;
